deploy/fanclash-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: qa
  name: mobile-api
  labels:
    app: mobile-api
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: mobile-api
