deploy/fanclash-admin/ingress_qa.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: qa
  name: "fanclash-admin-ingress"
  labels:
    app: "mobile-api"
    app: "fanclash-api"
    app: "fanclash-api-ws"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:736790963086:certificate/d13a002a-ffa6-4b0b-b538-eefba25bbf99
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
    service.beta.kubernetes.io/aws-load-balancer-ssl-negotiation-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "ssl"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600"
spec:
  # forward all requests to nginx-ingress-controller
  rules:
  - host: fanclash.staging.gamebuild.co
    http:
      paths:
      - path: /admin
        backend:
          serviceName: mobile-api
          servicePort: 80
      - path: /
        backend:
          serviceName: mobile-api
          servicePort: 80

      - path: /api
        backend:
          serviceName: fanclash-api
          servicePort: 80

      - path: /api/ws
        backend:
          serviceName: fanclash-api-ws
          servicePort: 80
